Added support for entering shloka

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,9 @@
 </div>
 
 <span id="header" align="center">
-  <h1 align="center">धातुरूपाणि </h1>
-  <h2 align="center">भ्वद्यादिजुहोत्यादि: दिवादि:स्वादिरेव च |</h2>
-  <h2 align="center">तुदादिश्च रुधादिश्च तन:क्र्यादिचुरादय:||</h2>
+  <h1 align="center">अमरकोष:</h1>
+  <h2 align="center">यस्य ज्ञानदयासिन्धोरगाधस्यानघा गुणा:|</h2>
+  <h2 align="center">सेव्यतामक्षयो धीरा: स श्रिये चामृताय च||</h2>
 </span>
 
 
