--- a/app/views/synonym/show.html.erb
+++ b/app/views/synonym/show.html.erb
@@ -7,10 +7,16 @@
       </th>
     </tr>
     <tr>
-      <td align="left"><%= @syn.details %></td>
+      <td align="left"><b>Description</b>
+        :&nbsp;&nbsp;&nbsp; <%= @syn.details %></td>
     </tr>
     <tr>
-      <td align="left"><%= @syn.words %></td>
+      <td align="left"><b>Words In Sholka</b>
+        :&nbsp;&nbsp;&nbsp; <%= @syn.words %></td>
+    </tr>
+    <tr>
+      <td align="left"><b>Shloka</b>
+        :&nbsp;&nbsp;&nbsp; <%= @syn.shloka %></td>
     </tr>
   </table>
 </div>
