added new summary attribute and matched word attribute

--- a/app/views/synonym/edit.html.erb
+++ b/app/views/synonym/edit.html.erb
@@ -9,6 +9,11 @@
             </th>
           </tr>
           <tr>
+            <td><b>Summary</b></td>
+            <td>
+              <%= s.text_field :summary, :size => 50 %></td>
+          </tr>
+          <tr>
             <td><b>Description</b></td>
             <td>
               <%= s.text_area :details, :cols => 50, :rows=> 3 %></td>
