--- a/app/views/synonym/index.html.erb
+++ b/app/views/synonym/index.html.erb
@@ -7,7 +7,7 @@
     </tr>
     <% @syn.each do |s| %>
         <tr>
-          <td align="center"><%= s.details %></td>
+          <td align="center"><%= s.summary %></td>
           <td align="center">
             <table width="100%">
               <tr>
