--- a/app/views/synonym/show.html.erb
+++ b/app/views/synonym/show.html.erb
@@ -7,6 +7,10 @@
       </th>
     </tr>
     <tr>
+      <td align="left"><b>Summary</b>
+        :&nbsp;&nbsp;&nbsp; <%= @syn.details %></td>
+    </tr>
+    <tr>
       <td align="left"><b>Description</b>
         :&nbsp;&nbsp;&nbsp; <%= @syn.details %></td>
     </tr>
