Fixed view page to show summarry and search page honour CRLF

--- a/app/views/synonym/edit.html.erb
+++ b/app/views/synonym/edit.html.erb
@@ -19,7 +19,7 @@
               <%= s.text_area :details, :cols => 50, :rows=> 3 %></td>
           </tr>
           <tr>
-            <td><b>Words In Sholka</b></td>
+            <td><b>Search Words</b></td>
             <td>
               <%= s.text_area :words, :cols => 50, :rows=> 3 %></td>
           </tr>
