--- a/app/views/synonym/show.html.erb
+++ b/app/views/synonym/show.html.erb
@@ -8,14 +8,14 @@
     </tr>
     <tr>
       <td align="left"><b>Summary</b>
-        :&nbsp;&nbsp;&nbsp; <%= @syn.details %></td>
+        :&nbsp;&nbsp;&nbsp; <%= @syn.summary %></td>
     </tr>
     <tr>
       <td align="left"><b>Description</b>
         :&nbsp;&nbsp;&nbsp; <%= @syn.details %></td>
     </tr>
     <tr>
-      <td align="left"><b>Words In Sholka</b>
+      <td align="left"><b>Search Words</b>
         :&nbsp;&nbsp;&nbsp; <%= @syn.words %></td>
     </tr>
     <tr>
